syntax = "proto3";

package example;

option go_package = "protoc-gen-go-ent/example";

import "options/ent.proto";

enum Origin {
  ORIGIN_UNSPECIFIED = 0;
  ORIGIN_LOCAL = 1;
  ORIGIN_FOREIGN = 2;
}

message Fields {
  option (ent.opts) = {gen: true};
  string astring = 1;
  bool bool = 2;
  int32 int32 = 3;
  sint32 sint32 = 4;
  uint32 uint32 = 5;
  sfixed32 sfixed32 = 6;
  fixed32 fixed32 = 7;
  int64 int64 = 8;
  sint64 sint64 = 9;
  uint64 uint64 = 10;
  sfixed64 sfixed64 = 11;
  fixed64 fixed64 = 12;
  float float = 13;
  double double = 14;
  optional string optional_string = 28;
  Origin required_origin = 16;
}

// a message that exercises field options
message FieldOptions {
  option (ent.opts) = {gen: true, additionalImports: ["time"]};
  string nillableString = 19 [(ent.field).nillable = true];
  string defaultString = 20 [(ent.field).default = "\"weh\""];
  string defaultStringFunc = 21 [(ent.field).defaultFunc = "time.Now().String"];
  string ignoredField = 22 [(ent.field).ignore = true];
  string uniqueField = 23 [(ent.field).unique = true];
  string createdAt = 24 [(ent.field).immutable = true];
  string commented = 25 [(ent.field).comment = "a neat comment"];
  string storageKey = 26 [(ent.field).storage_key = "some_column_name"];
  string struct_tag = 27 [(ent.field).struct_tag = "`json:\"omitempty\"`"];
  Origin origin = 15 [(ent.field).includeUnspecifiedEnum = true]; // an enum that should include the _UNSPECIFIED value, which is false by default
}